--- a/index.html
+++ b/index.html
@@ -321,9 +321,9 @@
 
         if (clickedIndex !== winningIndex) {
           clickedCard.classList.add('lose');
-          statusEl.textContent = "PERDU, Coup dur pour la joueuse belge";
+          statusEl.textContent = "🦶 PERDU, Coup dur pour la joueuse belge ";
         } else {
-          statusEl.textContent = "✨ SMOOCH SMOOCH TU AS GAGNE !";
+          statusEl.textContent = "🫦 SMOOCH SMOOCH TU AS GAGNE !🫦";
         }
       }
 
