--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
           clickedCard.classList.add('lose');
           statusEl.textContent = "🦶 PERDU, Coup dur pour la joueuse belge ";
         } else {
-          statusEl.textContent = "🫦 SMOOCH SMOOCH TU AS GAGNE !🫦";
+          statusEl.textContent = "🫦 SMOOCH SMOOCH TU AS GAGNE !";
         }
       }
 
