--- a/index.html
+++ b/index.html
@@ -46,41 +46,34 @@
     }
     .card.flipped .card-inner { transform: rotateY(180deg); }
 
-.card-face {
-  position: absolute;
-  inset: 0;
-  border-radius: 12px;
-  backface-visibility: hidden;
-}
-
-.card-face.back {
-  display: grid;
-  place-items: center;
-  color: var(--muted);
-  font-size: 1.4rem;
-  font-weight: 700;
-}
-
-    
-.card-face.front .card-img {
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block;
-}
-
-    
-    .card-face.front .card-img {
+    .card-face {
       position: absolute;
       inset: 0;
+      border-radius: 12px;
+      display: grid;
+      place-items: center;
+      font-weight: 700;
+      backface-visibility: hidden;
+    }
+    .card-face.back {
+      color: var(--muted);
+      font-size: 1.4rem;
+    }
+    .card-face.front {
+      transform: rotateY(180deg);
+      position: relative; /* pour les effets ::before/::after */
+      overflow: hidden;
+      background: #0f1122; /* fond si image plus petite */
+    }
+
+    /* Image de face */
+    .card-face.front .card-img {
       width: 100%;
       height: 100%;
       object-fit: cover;
+      border-radius: 12px;
       display: block;
     }
-
 
     /* Perdu : un léger feedback visuel */
     .card.revealed.lose .card-face.front .card-img {
