--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <!-- Accueil -->
     <section id="home" class="panel visible" tabindex="0">
       <h1> 最もユニークなたまごっち </h1>
-      <p> YIYIYIYIYIYIII🔥! Voici ton nouveau tamagotchi dans une édition super limitée : <strong> Echomori Style 🐟 </strong> — LE tamagotchi que tout le monde s'arrache (disponible en un seul exemplaire !).</p>
+      <p> YIYIYIYIYIYIII🔥! Voici ton nouveau tamagotchi dans une édition super limitée : <strong> Echomori Style 🐟 </strong> — LE tamagotchi que tout le monde s'arrache (diponible en un seul exemplaire !).</p>
       <figure class="hero">
         <img src="assets/images/cover.png" alt="Fond étoilé avec une étoile dorée au centre" />
         <figcaption>Ton groupe de ROCKSTARS à portée de main</figcaption>
@@ -321,9 +321,9 @@
 
         if (clickedIndex !== winningIndex) {
           clickedCard.classList.add('lose');
-          statusEl.textContent = "🦶 PERDU, Coup dur pour la joueuse belge";
+          statusEl.textContent = "PERDU, Coup dur pour la joueuse belge";
         } else {
-          statusEl.textContent = "🫦 SMOOCH SMOOCH TU AS GAGNE !";
+          statusEl.textContent = "✨ SMOOCH SMOOCH TU AS GAGNE !";
         }
       }
 
