--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
       function initGame() {
         winningIndex = Math.floor(Math.random() * 3);
         locked = false;
-        statusEl.textContent = "Choisis une carte…";
+        statusEl.textContent = "le choix est difficile ?";
 
         const normals = pickTwoDistinctNormalImages();
         const cards = grid.querySelectorAll('.card');
