--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
 
       <ol class="steps">
         <li>Appuie sur les boutons de droite et de gauche simultanément <strong>pendant 5 secondes</strong> pour allumer/éteindre le tamagotchi.</li>
-        <li>Fais-le grandir, monte ton groupe et <strong>SLAY GIRLLLL</strong> 💅 !</li>
+        <li>Fais-le grandir, entraîne le et <strong>SLAY GIRLLLL</strong> 💅 !</li>
         <li>Plus tu t’en occupes, plus IL DEVIENT UNE ROCKSTAR D'EXCEPTION 🔥.</li>
-        <li>Prends en soin (faim, hygiène, sommeil), SINON IL MEURT ☠️.</li>
+        <li>Prends en soin, SINON IL MEURT ☠️.</li>
       </ol>
 
       <div class="lore" style="text-align: center;">
