--- a/index.html
+++ b/index.html
@@ -168,10 +168,11 @@
       <h2>Comment ça marche ?</h2>
 
       <ol class="steps">
-        <li>Appuie sur les boutons de droite et de gauche simultanément <strong>pendant 5 secondes</strong> pour allumer/éteindre le tamagotchi.</li>
+        <li>Appuie sur les boutons de droite et de gauche simultanément <strong>pendant 5 secondes</strong> pour allumer le tamagotchi.</li>
         <li>Fais-le grandir, entraîne le et <strong>SLAY GIRLLLL</strong> 💅 !</li>
         <li>Plus tu t’en occupes, plus IL DEVIENT UNE ROCKSTAR D'EXCEPTION 🔥.</li>
         <li>Prends en soin, SINON IL MEURT ☠️.</li>
+        <li>Plusieurs fonctionnalitées sont cachées, à toi de les découvrir 🔎!</li>
       </ol>
 
       <div class="lore" style="text-align: center;">
