Fix typo in index.html for 'fonctionnalités'

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <li>Fais-le grandir, entraîne le et <strong>SLAY GIRLLLL</strong> 💅 !</li>
         <li>Plus tu t’en occupes, plus IL DEVIENT UNE ROCKSTAR D'EXCEPTION 🔥.</li>
         <li>Prends en soin, SINON IL MEURT ☠️.</li>
-        <li>Plusieurs fonctionnalitées sont cachées, à toi de les découvrir 🔎!</li>
+        <li>Plusieurs fonctionnalités sont cachées, à toi de les découvrir 🔎!</li>
       </ol>
 
       <div class="lore" style="text-align: center;">
