--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <p> YIYIYIYIYIYIII🔥! Voici ton nouveau tamagotchi dans une édition super limitée : <strong> Echomori Style 🐟 </strong> — LE tamagotchi que tout le monde s'arrache (disponible en un seul exemplaire !).</p>
       <figure class="hero">
         <img src="assets/images/cover.png" alt="Fond étoilé avec une étoile dorée au centre" />
-        <figcaption>Ton groupe de ROCKSTARS à portée de main</figcaption>
+        <figcaption>Ta ROCKSTARS à portée de main</figcaption>
       </figure>
       <div class="cta-row">
         <a href="#how" class="btn primary" data-target="how">Comment ça marche ?</a>
@@ -168,11 +168,11 @@
       <h2>Comment ça marche ?</h2>
 
       <ol class="steps">
-        <li>Appuie sur les boutons de droite et de gauche simultanément <strong>pendant 5 secondes</strong> pour allumer le tamagotchi.</li>
         <li>Fais-le grandir, entraîne le et <strong>SLAY GIRLLLL</strong> 💅 !</li>
         <li>Plus tu t’en occupes, plus IL DEVIENT UNE ROCKSTAR D'EXCEPTION 🔥.</li>
         <li>Prends en soin, SINON IL MEURT ☠️.</li>
         <li>Plusieurs fonctionnalités sont cachées, à toi de les découvrir 🔎!</li>
+        <li>Ce tamagotchi fonctionne sur batterie, pense à le recharger <strong>une fois</strong> par jour !</li>
       </ol>
 
       <div class="lore" style="text-align: center;">
