--- a/index.html
+++ b/index.html
@@ -154,7 +154,10 @@
       <h1> 最もユニークなたまごっち </h1>
       <p> YIYIYIYIYIYIII🔥! Voici ton nouveau tamagotchi dans une édition super limitée : <strong> Echomori Style 🐟 </strong> — LE tamagotchi que tout le monde s'arrache (disponible en un seul exemplaire !).</p>
       <figure class="hero">
-        <img src="assets/images/cover.png" alt="Fond étoilé avec une étoile dorée au centre" />
+        <video autoplay muted loop playsinline>
+          <source src="assets/images/PresentationPourSite.mp4" type="video/mp4">
+          Ton navigateur ne supporte pas la vidéo.
+        </video>
         <figcaption>Ta ROCKSTARS à portée de main</figcaption>
       </figure>
       <div class="cta-row">
