Change video element to include controls and preload

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <h1> 最もユニークなたまごっち </h1>
       <p> YIYIYIYIYIYIII🔥! Voici ton nouveau tamagotchi dans une édition super limitée : <strong> Echomori Style 🐟 </strong> — LE tamagotchi que tout le monde s'arrache (disponible en un seul exemplaire !).</p>
       <figure class="hero">
-        <video autoplay muted loop playsinline>
+        <video controls preload="metadata">
           <source src="assets/images/PresentationPourSite.mp4" type="video/mp4">
           Ton navigateur ne supporte pas la vidéo.
         </video>
