Refactor video section with poster and div wrapper
Updated video section to include a poster image and wrapped it in a div.

--- a/index.html
+++ b/index.html
@@ -153,13 +153,15 @@
     <section id="home" class="panel visible" tabindex="0">
       <h1> 最もユニークなたまごっち </h1>
       <p> YIYIYIYIYIYIII🔥! Voici ton nouveau tamagotchi dans une édition super limitée : <strong> Echomori Style 🐟 </strong> — LE tamagotchi que tout le monde s'arrache (disponible en un seul exemplaire !).</p>
-      <figure class="hero">
-        <video controls preload="metadata">
-          <source src="assets/images/PresentationPourSite.mp4" type="video/mp4">
-          Ton navigateur ne supporte pas la vidéo.
-        </video>
-        <figcaption>Ta ROCKSTARS à portée de main</figcaption>
-      </figure>
+        <figure class="hero">
+    <div class="hero-media">
+      <video controls preload="metadata" poster="assets/images/cover.png">
+        <source src="assets/images/PresentationPourSite.mp4" type="video/mp4">
+        Ton navigateur ne supporte pas la vidéo.
+      </video>
+    </div>
+    <figcaption>Ta ROCKSTARS à portée de main</figcaption>
+  </figure>
       <div class="cta-row">
         <a href="#how" class="btn primary" data-target="how">Comment ça marche ?</a>
         <a href="#contact" class="btn" data-target="contact">Une réclamation ? c'est ici</a>
