--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <!-- Accueil -->
     <section id="home" class="panel visible" tabindex="0">
       <h1> 最もユニークなたまごっち </h1>
-      <p> YIYIYIYIYIYIII🔥! Voici ton nouveau tamagotchi dans une édition super limitée : <strong> Echomori Style 🐟 </strong> — LE tamagotchi que tout le monde s'arrache (disponible en un seul exemplaire !).</p>
+      <p> YIYIYIYIYIYIII🔥! Voici ton nouveau Tamagotchi dans une édition super limitée : <strong> Echomori Style 🐟 </strong> — LE Tamagotchi que tout le monde s'arrache (disponible en un seul exemplaire !).</p>
        <figure class="hero">
       <div class="hero-media">
         <video controls preload="metadata" playsinline poster="assets/images/cover.png">
@@ -177,12 +177,12 @@
         <li>Plus tu t’en occupes, plus IL DEVIENT UNE ROCKSTAR D'EXCEPTION 🔥.</li>
         <li>Prends en soin, SINON IL MEURT ☠️.</li>
         <li>Plusieurs fonctionnalités sont cachées, à toi de les découvrir 🔎!</li>
-        <li>Ce tamagotchi fonctionne sur batterie, pense à le recharger <strong>une fois</strong> par jour !</li>
+        <li>Ce Tamagotchi fonctionne sur batterie, pense à le recharger <strong>une fois</strong> par jour !</li>
       </ol>
 
       <div class="lore" style="text-align: center;">
         <p class="hidden-lore" style="opacity: 0.35; font-style: italic;">
-          Ce tamagotchi n’apparaît qu’une fois par génération.
+          Ce Tamagotchi n’apparaît qu’une fois par génération.
         </p>
         <p style="opacity: 0.35; font-style: italic;">
           Tu as été choisie. Bonne chance. 🐟✨
