Update video poster image in index.html

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <p> YIYIYIYIYIYIII🔥! Voici ton nouveau Tamagotchi dans une édition super limitée : <strong> Echomori Style 🐟 </strong> — LE Tamagotchi que tout le monde s'arrache (disponible en un seul exemplaire !).</p>
        <figure class="hero">
       <div class="hero-media">
-          <video controls preload="metadata" playsinline poster="assets/images/cover.png">
+          <video controls preload="metadata" playsinline poster="assets/images/cover2.png">
           <source src="assets/images/PresentationPourSite.mp4" type="video/mp4">
           Ton navigateur ne supporte pas la vidéo.
         </video>
