--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           Ton navigateur ne supporte pas la vidéo.
         </video>
       </div>
-      <figcaption>Ta ROCKSTARS à portée de main</figcaption>
+      <figcaption>Ta ROCKSTAR à portée de main</figcaption>
     </figure>
       <div class="cta-row">
         <a href="#how" class="btn primary" data-target="how">Comment ça marche ?</a>
