--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       <h2>Comment ça marche ?</h2>
 
       <ol class="steps">
-        <li>Fais-le grandir, entraîne le et <strong>SLAY GIRLLLL</strong> 💅 !</li>
+        <li>Fais-le grandir, entraîne-le et <strong>SLAY GIRLLLL</strong> 💅 !</li>
         <li>Plus tu t’en occupes, plus IL DEVIENT UNE ROCKSTAR D'EXCEPTION 🔥.</li>
         <li>Prends en soin, SINON IL MEURT ☠️.</li>
         <li>Plusieurs fonctionnalités sont cachées, à toi de les découvrir 🔎!</li>
